# openhands-subagent-patterns

./: .env.example  .gitignore  README.md  pyproject.toml
demo_runs/github_control/20260309-230355/: connector_plan.md
demo_runs/github_control/20260310-132052/: connector_handoff.md  connector_plan.md
docs/: mental_model.md
scripts/: demo_async_cloud.py  demo_github_control.py  demo_oh_conversations.py  demo_sdk_delegate.py  demo_sdk_subagents.py  inspect_cloud_conversations.py  print_workflow.py
skills/app_builder/: SKILL.md
skills/connector_builder/: SKILL.md
skills/github_coordinator/: SKILL.md
skills/integration_tester/: SKILL.md
src/subagent_patterns/: __init__.py  agents.py  cloud_async.py  cloud_conversation_control.py  cloud_conversations.py  demo_runner.py  env.py  github_control.py  models.py  scenarios.py  sdk_conversation_orchestrator.py  sdk_delegate.py  skills.py
